# local_polars_read_databricks_unity_catalog

./: .gitignore  README.md  example.ipynb  pyproject.toml
devops/: .env.example  bootstrap.sh  start_environment.sh
src/: utils.py
