[project]
name = "local-polars-read-databricks-unity-catalog"
version = "0.1.0"
description = "Example how to use polars locally to query Databricks UC data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deltalake>=1.1.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
]